# Deassimilation

./: .gitignore  LICENSE  Makefile  README.md  build-deassimilation.sh  deassimilate.py  dev_requirements.txt  perflog.md  pyproject.toml  pytest.ini  requirements.txt  runtest.sh
deassimilateUtils/: LICENSE.txt  README.txt  TODO.txt  pyproject.toml  setup.cfg
deassimilateUtils/deassimilateUtils/: DeassimilateProcess.py  DirectoryWalker.py  LICENSE  Logger.py
local_tests/: test_local.py  treeinfo.py
local_tests/test_scripts/: 10000rows.txt  1MilFiles.sh  GetHealth.sh  cleanup.sh.old  clear_Hammerspace.sh  clear_NFS.sh  dircomp.py  hammerspace_mount.sh  make_test_files.sh  mount_nfs.sh  pTest.sh  testscan.py
tests/: conftest.py  test_pdirwalk.py
