# -------------------------------------------------------------------------------
# setup.py
#
# Build the deassimilateUtils library

[metadata]
name = deassimilateUtils
version = 1.0.0
author = Michael Kade
author_email = mike.kade@hammerspace.com
long_description = file: README.txt
license_files = LICENSE.txt
url = http://www.hammerspace.com

[options]
packages = find:
# package_dir = .
python_requires = >=3.10
install_requires =
    requests
    dill
    humanize


